changes all temple references to spill
